--- a/client/src/App.css
+++ b/client/src/App.css
@@ -920,9 +920,9 @@ span.hover:hover{
   box-shadow: 0px 0px 6px 0px #E4E7ED, 0px 0px 0px 2px #D10024;
 }
 
-.product .product-img {
+/* .product .product-img {
   position: relative;
-}
+} */
 
 .product .product-img>img {
   width: 100%;
@@ -1628,7 +1628,7 @@ span.hover:hover{
   font-weight: 500;
   font-size: 12px;
   text-transform: uppercase;
-  margin-right: 15px;
+  /* margin-right: 15px; */
   margin-bottom: 0px;
 }
 
